--- a/templates/app_site/index.html
+++ b/templates/app_site/index.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 <div class="text-center m-5">
-    <h5>Em manutenção. Enquanto isso, explore as outras abas! 😉</h5>
+  <p class="fs-5">Em manutenção. Enquanto isso, explore as outras abas! 😉</p>
     <!-- <div class="d-flex justify-content-center pt-2">
       <div class="w-25">
         <ul class="list-group">
