--- a/templates/app_quis/index.html
+++ b/templates/app_quis/index.html
@@ -44,7 +44,7 @@
     <form action="{% url 'quis.envia-simulado' %}" method="post" id="form-simulado">
         {% csrf_token %}
         <div class="fadeIn text-center w-100" id="iniciar-simu">
-            <h5>Pronto(a) para iniciar o simulado?</h5>
+            <p class="fs-5">Pronto(a) para iniciar o simulado?</p>
             <button type="button" class="btn btn-primary shadow" id="btn-iniciar">Começar</button>
         </div>
         <div id="container-questoes" actual-question="1">
@@ -52,7 +52,7 @@
                 <div class="d-none questao w-100" id="questao-1">
                     <div class="p-3 pb-1 rounded" style="background-color: #f6f6f6;">
                         <input type="hidden" name="perg-{{questao.index}}" value="{{questao.pergunta.id}}">
-                        <p><strong>Questão {{ questao.index }}</strong> - {{questao.categoria}}</p>
+                        <p><strong>Questão {{ questao.index }}</strong> - <small>{{questao.categoria}}</small></p>
                         <p>
                             {{ questao.pergunta.enunciado }}
                         </p>
