--- a/templates/app_site/index.html
+++ b/templates/app_site/index.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 <div class="text-center m-5">
-  <p class="fs-5">Em manutenção. Enquanto isso, explore as outras abas! 😉</p>
+  <p class="fs-5">Este site é direcionado para as pessoas que estão tirando a carteira de habilitação e precisam adquirir conhecimento na área.</p>
     <!-- <div class="d-flex justify-content-center pt-2">
       <div class="w-25">
         <ul class="list-group">
