add aba documentos

--- a/templates/nav.html
+++ b/templates/nav.html
@@ -15,6 +15,9 @@
             <li class="nav-item">
                 <a class="nav-link text-decoration-none text-white" href="{% url 'placas.index' %}">Placas</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link text-decoration-none text-white" href="{% url 'site.documentos' %}">Documentos</a>
+            </li>
         </ul>
     </div>
 </div>
