add uma imagem em home

--- a/templates/app_site/index.html
+++ b/templates/app_site/index.html
@@ -7,18 +7,8 @@
 {% block content %}
 <div class="text-center m-5">
   <p class="fs-5">Este site é direcionado para as pessoas que estão tirando a carteira de habilitação e precisam adquirir conhecimento na área.</p>
-    <!-- <div class="d-flex justify-content-center pt-2">
-      <div class="w-25">
-        <ul class="list-group">
-          <li class="list-group-item">
-              <a href="{% url 'quis.index' %}">Simulados</a>
-          </li>
-          <li class="list-group-item">
-              <a href="{% url 'placas.index' %}">Placas</a>
-          </li>
-        </ul>
-      </div>
-    </div> -->
+  
+  <img src="/static/image/img_home.jpeg" class="w-50 shadow rounded img-thumbnail">
 </div>
 {% endblock content %}
 
