--- a/templates/app_site/index.html
+++ b/templates/app_site/index.html
@@ -8,7 +8,7 @@
 <div class="text-center m-5">
   <p class="fs-5">Este site é direcionado para as pessoas que estão tirando a carteira de habilitação e precisam adquirir conhecimento na área.</p>
   
-  <img src="/static/image/img_home.jpeg" class="w-50 shadow rounded img-thumbnail">
+  <img src="/static/image/img_home.jpeg" class="w-auto shadow rounded img-thumbnail">
 </div>
 {% endblock content %}
 
